...
                            <constraint firstAttribute="bottom" secondItem="1FR-9q-7De" secondAttribute="bottom" id="Shy-7l-PEi"/>
                            <constraint firstItem="1FR-9q-7De" firstAttribute="leading" secondItem="2r2-Hk-YRw" secondAttribute="leading" id="vn8-x0-LM4"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="IkS-ap-gbY"/>
                    <connections>
                        <outlet property="backButton" destination="l9i-LS-OX3" id="eAe-eX-dLv"/>
                        <outlet property="imageView" destination="XC9-Dg-84x" id="8Yh-t8-hZu"/>
                        <outlet property="scrollView" destination="1FR-9q-7De" id="qfv-KC-ASQ"/>
                        <outlet property="shareButton" destination="mMW-oP-SUg" id="16x-ys-j69"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="vPd-7c-JiZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                                    <constraint firstAttribute="height" constant="60" id="roE-hR-69S"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="983-zw-9N7" userLabel="loginButton">
                                <rect key="frame" x="16" y="690" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="d2f-lo-aoI"/>
                                </constraints>
                                <color key="tintColor" name="YP Black"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
...
