...
    private let skeleton = SkeletonAnimationService()
    
    // MARK: - Lifecycle
    override func awakeFromNib() {
        super.awakeFromNib()
        
        likeButton.accessibilityIdentifier = "like_button"
        
        dataLabel.font = UIFont.systemFont(ofSize: 13, weight: .regular)
        dataLabel.textColor = UIColor(resource: .ypWhite)
        
        likeButton.setImage(UIImage(resource: .likeButtonOff), for: .normal)
        likeButton.setImage(UIImage(resource: .likeButtonOn), for: .selected)
...
